--- a/main.html
+++ b/main.html
@@ -3,9 +3,79 @@
   <head>
     <title>Connecting To CSS</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
+	  <style>
+		  /* Header */
+header {
+  background-color: #e5e5e5;
+  padding: 20px;
+}
+
+/* Navigation Bar */
+nav {
+  background-color: black;
+  padding: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 15px;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+/* Main Section */
+main {
+  background-color: #f5f5f5;
+  padding: 20px;
+}
+
+/* Sidebar */
+aside {
+  background-color: lightgray;
+  padding: 20px;
+}
+
+/* Footer */
+footer {
+  background-color: #e5e5e5;
+  padding: 20px;
+}
+
+	  </style>
   </head>
   <body>
     <!-- Write your code here -->
+	  <header>
+		  <h1>Header</h1>
+			<nav>
+		    <ul>
+		      <li><a href="#home">Home</a></li>
+		      <li><a href="#about">About</a></li>
+		      <li><a href="#contact">Contact</a></li>
+		    </ul>
+			</nav>
+
+		   <main>
+    <h1>Main Section</h1>
+    <p>This is the main section of the page containing the core content.</p>
+  </main>
+
+  <aside>
+    <h2>Sidebar</h2>
+    <p>This is the sidebar area of the page.</p>
+  </aside>
+
+  <footer>
+    <p>© Copyright 2020 Footer</p>
+  </footer>
+	  </header>
     <script src="script.js"></script>
   </body>
 </html>
