--- a/main.html
+++ b/main.html
@@ -4,16 +4,17 @@
     <title>Connecting To CSS</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
 	  <style>
-		  /* Header */
+		 
 header {
   background-color: #e5e5e5;
   padding: 20px;
 }
 
-/* Navigation Bar */
+
 nav {
   background-color: black;
   padding: 10px;
+	color: white;
 }
 
 nav ul {
@@ -29,19 +30,18 @@ nav a {
   text-decoration: none;
 }
 
-/* Main Section */
 main {
   background-color: #f5f5f5;
   padding: 20px;
 }
 
-/* Sidebar */
+
 aside {
   background-color: lightgray;
   padding: 20px;
 }
 
-/* Footer */
+
 footer {
   background-color: #e5e5e5;
   padding: 20px;
